--- a/portfolio/gks-1.html
+++ b/portfolio/gks-1.html
@@ -982,11 +982,11 @@
                                   <a
                                     class="item-wrap ajax-link-project"
                                     data-type="page-transition"
-                                    href="http://irkpk.ru/colega_portfolio/e-tips/"
+                                    href="gks-2.html"
                                   ></a>
                                   <div class="item-wrap-image">
                                     <img
-                                      src="../images/etips-cover2.jpg"
+                                      src="../images/project-7.png"
                                       class="item-image grid__item-img"
                                       data-firstline
                                       data-secondline
@@ -995,20 +995,20 @@
                                   </div>
                                   <img
                                     class="grid__item-img grid__item-img--large"
-                                    src="../images/etips-cover2.jpg"
+                                    src="../images/project-sample.png"
                                     alt="Next Project Image"
                                   />
                                 </div>
                                 <div class="item-caption">
-                                  <h2 class="item-title">E-tips</h2>
+                                  <h2 class="item-title">«Система электронного документооборота УК»</h2>
                                 </div>
                               </div>
                             </div>
                           </div>
                         </div>
                         <div class="marquee-wrapper">
-                          <div class="next-title-marquee" data-text="E-tips E-tips E-tips E-tips E-tips E-tips E-tips">
-                            E-tips E-tips E-tips E-tips E-tips E-tips E-tips
+                          <div class="next-title-marquee" data-text="«Система электронного документооборота УК»">
+                            «Система электронного документооборота УК»
                           </div>
                         </div>
                       </div>
