--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
                               </div>
                               <img
                                 class="grid__item-img grid__item-img--large"
-                                src="images/project-sample.png"
+                                src="images/project-5-sample.png"
                                 alt="Slide Image"
                               />
                             </div>
