--- a/_stories.html
+++ b/_stories.html
@@ -4,6 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta charset="utf-8">
+
     <title>Blog &#x2d; Smitana</title>
     <meta name="robots" content="max-image-preview:large" />
 
