--- a/portfolio/it-service.html
+++ b/portfolio/it-service.html
@@ -3,6 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta charset="utf-8">
+
     <title>ИПК - Обслуживание ИТ.</title>
     <meta name="robots" content="max-image-preview:large" />
 
