fix: link to it-service

--- a/portfolio/documents.html
+++ b/portfolio/documents.html
@@ -1038,7 +1038,7 @@
                                   <a
                                     class="item-wrap ajax-link-project"
                                     data-type="page-transition"
-                                    href="contact-center.html"
+                                    href="it-service.html"
                                   ></a>
                                   <div class="item-wrap-image">
                                     <img
@@ -1056,15 +1056,15 @@
                                   />
                                 </div>
                                 <div class="item-caption">
-                                  <h2 class="item-title">Контакт-центр</h2>
+                                  <h2 class="item-title">Обслуживание ИТ</h2>
                                 </div>
                               </div>
                             </div>
                           </div>
                         </div>
                         <div class="marquee-wrapper">
-                          <div class="next-title-marquee" data-text="Контакт-центр Контакт-центр Контакт-центр">
-                            Контакт-центр Контакт-центр Контакт-центр
+                          <div class="next-title-marquee" data-text="Обслуживание ИТ Обслуживание ИТ Обслуживание ИТ Обслуживание ИТ">
+                            Обслуживание ИТ Обслуживание ИТ Обслуживание ИТ Обслуживание ИТ
                           </div>
                         </div>
                       </div>
