refactor: move files from portfolio/ to projects/ dir

--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
                               <a
                                 class="item-wrap ajax-link-project"
                                 data-type="page-transition"
-                                href="portfolio/billing.html"
+                                href="projects/billing.html"
                               ></a>
                               <div class="item-wrap-image">
                                 <img src="images/project-1.png" class="item-image grid__item-img" alt="Slide Image" />
@@ -926,7 +926,7 @@
                               <a
                                 class="item-wrap ajax-link-project"
                                 data-type="page-transition"
-                                href='portfolio/processing.html'
+                                href='projects/processing.html'
                               ></a>
                               <div class="item-wrap-image">
                                 <img src="images/project-2.png" class="item-image grid__item-img" alt="Slide Image" />
@@ -954,7 +954,7 @@
                               <a
                                 class="item-wrap ajax-link-project"
                                 data-type="page-transition"
-                                href='portfolio/portalgkh.html'
+                                href='projects/portalgkh.html'
                               ></a>
                               <div class="item-wrap-image">
                                 <img
@@ -986,7 +986,7 @@
                               <a
                                 class="item-wrap ajax-link-project"
                                 data-type="page-transition"
-                                href='portfolio/documents.html'
+                                href='projects/documents.html'
                               ></a>
                               <div class="item-wrap-image">
                                 <img
@@ -1018,7 +1018,7 @@
                               <a
                                 class="item-wrap ajax-link-project"
                                 data-type="page-transition"
-                                href="portfolio/it-service.html"
+                                href="projects/it-service.html"
                               ></a>
                               <div class="item-wrap-image">
                                 <img src="images/project-5.png" class="item-image grid__item-img" alt="Slide Image" />
@@ -1039,6 +1039,62 @@
                         </div>
                       </div>
 
+                      <div class="item normal design disable-drag" data-item="6">
+                        <div class="item-parallax enabled">
+                          <div class="item-appear">
+                            <div class="item-content">
+                              <a
+                                class="item-wrap ajax-link-project"
+                                data-type="page-transition"
+                                href="projects/public.html"
+                              ></a>
+                              <div class="item-wrap-image">
+                                <img src="images/project-6.png" class="item-image grid__item-img" alt="Slide Image" />
+                              </div>
+                              <img
+                                class="grid__item-img grid__item-img--large"
+                                src="images/project-6-sample.png"
+                                alt="Slide Image"
+                              />
+                            </div>
+                          </div>
+                          <div class="item-caption-wrapper">
+                            <div class="item-caption">
+                              <h2 class="item-title">Отдел по обращениям</h2>
+                              <h4 class="item-cat"></h4>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item normal design disable-drag" data-item="7">
+                        <div class="item-parallax enabled">
+                          <div class="item-appear">
+                            <div class="item-content">
+                              <a
+                                class="item-wrap ajax-link-project"
+                                data-type="page-transition"
+                                href="projects/printcentre.html"
+                              ></a>
+                              <div class="item-wrap-image">
+                                <img src="images/project-7.png" class="item-image grid__item-img" alt="Slide Image" />
+                              </div>
+                              <img
+                                class="grid__item-img grid__item-img--large"
+                                src="images/project-7-sample.png"
+                                alt="Slide Image"
+                              />
+                            </div>
+                          </div>
+                          <div class="item-caption-wrapper">
+                            <div class="item-caption">
+                              <h2 class="item-title">Печатный центр</h2>
+                              <h4 class="item-cat"></h4>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
 <!--                      <div class="item normal branding disable-drag" data-item="6">-->
 <!--                        <div class="item-parallax enabled">-->
 <!--                          <div class="item-appear">-->
@@ -1046,7 +1102,7 @@
 <!--                              <a-->
 <!--                                class="item-wrap ajax-link-project"-->
 <!--                                data-type="page-transition"-->
-<!--                                href="portfolio/gks-1.html"-->
+<!--                                href="projects/gks-1.html"-->
 <!--                              ></a>-->
 <!--                              <div class="item-wrap-image">-->
 <!--                                <img src="images/project-6.png" class="item-image grid__item-img" alt="Slide Image" />-->
@@ -1074,7 +1130,7 @@
 <!--                              <a-->
 <!--                                class="item-wrap ajax-link-project"-->
 <!--                                data-type="page-transition"-->
-<!--                                href="portfolio/gks-2.html"-->
+<!--                                href="projects/gks-2.html"-->
 <!--                              ></a>-->
 <!--                              <div class="item-wrap-image">-->
 <!--                                <img-->
@@ -1106,7 +1162,7 @@
 <!--                              <a-->
 <!--                                class="item-wrap ajax-link-project"-->
 <!--                                data-type="page-transition"-->
-<!--                                href="portfolio/tv.irkgkh.html"-->
+<!--                                href="projects/tv.irkgkh.html"-->
 <!--                              ></a>-->
 <!--                              <div class="item-wrap-image">-->
 <!--                                <img src="images/project-8.png" class="item-image grid__item-img" alt="Slide Image" />-->
@@ -1134,7 +1190,7 @@
 <!--                              <a-->
 <!--                                class="item-wrap ajax-link-project"-->
 <!--                                data-type="page-transition"-->
-<!--                                href="portfolio/irkgkh.html"-->
+<!--                                href="projects/irkgkh.html"-->
 <!--                              ></a>-->
 <!--                              <div class="item-wrap-image">-->
 <!--                                <img src="images/project-9.png" class="item-image grid__item-img" alt="Slide Image" />-->
